# python-versionnumber

./: .gitignore  LICENSE  README.md  pyproject.toml
src/versionnumber/: __init__.py
src/versionnumber/semantic/: __init__.py  v2.py
